--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 alabaster==0.7.10
 auto-ml==2.9.10
-auto-sklearn==0.3.0
+-e git+https://github.com/automl/auto-sklearn.git@43eb3d86b72374a15382e418482a363edeace39b#egg=auto_sklearn
 Babel==2.6.0
 certifi==2018.4.16
 chardet==3.0.4
@@ -8,25 +8,43 @@ colorama==0.3.9
 ConfigSpace==0.4.6
 Cython==0.28.3
 deap==1.2.2
+debtcollector==1.19.0
+decorator==4.3.0
 dill==0.2.7.1
 docutils==0.14
+fasteners==0.14.1
 future==0.16.0
 h2o==3.18.0.11
 h5py==2.7.1
 idna==2.6
 imagesize==1.0.0
+ipython-genutils==0.2.0
+iso8601==0.1.12
 Jinja2==2.10
 joblib==0.11
+jsonschema==2.6.0
+jupyter-core==4.4.0
 liac-arff==2.2.1
 lightgbm==2.0.12
 lockfile==0.12.2
 MarkupSafe==1.0
+mock==2.0.0
+monotonic==1.5
 multiprocess==0.70.5
+nbformat==4.4.0
+netaddr==0.7.19
+netifaces==0.10.7
 nose==1.3.7
 numpy==1.14.3
+-e git+https://github.com/openml/openml-python.git@7a612eaece2fd28315d99dda3e2393ada2f27478#egg=openml
+oslo.concurrency==3.27.0
+oslo.config==6.2.1
+oslo.i18n==3.20.0
+oslo.utils==3.36.2
 packaging==17.1
 pandas==0.23.0
 pathos==0.2.1
+pbr==4.0.3
 pox==0.2.3
 ppft==1.6.4.7.1
 psutil==5.4.5
@@ -38,6 +56,7 @@ python-dateutil==2.7.3
 pytz==2018.4
 PyYAML==3.12
 requests==2.18.4
+rfc3986==1.1.0
 scikit-learn==0.19.1
 scipy==1.1.0
 six==1.11.0
@@ -48,10 +67,14 @@ snowballstemmer==1.2.1
 Sphinx==1.7.4
 sphinx-rtd-theme==0.3.1
 sphinxcontrib-websupport==1.0.1
+stevedore==1.28.0
 stopit==1.1.2
 tabulate==0.8.2
 TPOT==0.9.3
 tqdm==4.23.4
+traitlets==4.3.2
 typing==3.6.4
 update-checker==0.16
 urllib3==1.22
+wrapt==1.10.11
+xmltodict==0.11.0
