--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 alabaster==0.7.10
-auto-ml==2.9.10
+-e git+https://github.com/adithyabsk/auto_ml.git@9fa869a00531568a0f722f1964868099d4b52959#egg=auto_ml
 -e git+https://github.com/automl/auto-sklearn.git@43eb3d86b72374a15382e418482a363edeace39b#egg=auto_sklearn
 Babel==2.6.0
 certifi==2018.4.16
