--- a/ssh/config
+++ b/ssh/config
@@ -1,4 +1,8 @@
 #SSH Information for git repository
+HOST *
+ StrictHostKeyChecking no
+ User ec2-user
+ IdentityFile ~/.ssh/aws
 HOST repo
  HostName github.com
  User git
