--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,9 @@
+colour==0.1.5
+cycler==0.10.0
+jmespath==0.9.3
+kiwisolver==1.0.1
+matplotlib==2.2.2
+s3transfer==0.1.13
 alabaster==0.7.10
 -e git+https://github.com/adithyabsk/auto_ml.git#egg=auto_ml
 -e git+https://github.com/adithyabsk/auto-sklearn.git@automl-benchmark-dev#egg=auto_sklearn
